hphp/test/zend/bad/ext/simplexml/tests/013.php
<?php 

$xml =<<<EOF
<?xml version="1.0" encoding="ISO-8859-1" ?>
<foo>bar<baz/>bar</foo>
EOF;

$sxe = simplexml_load_string($xml);

var_dump((string)$sxe);

?>
===DONE===